2006-01-03  Mark McLoughlin  <mark@skynet.ie>

	* configure.in: remove comment which refers to
	code which was removed when we started using
	AM_GCONF_SOURCE_2

2005-12-22  Nickolay V. Shmyrev  <nshmyrev@yandex.ru>

	* libgnome/gnome-help.c: (gnome_help_display_with_doc_id_and_env):
	Fix searching of document when doc_id is NULL. See bug
	#84148.

2005-12-17  Kjartan Maraas  <kmaraas@gnome.org>

	* libgnome/gnome-program.c: (gnome_program_postinit):
	Remove call to g_blow_chunks(). GMemChunks are deprecated
	now and this shouldn't produce much of an ill effect hopefully?
	* monikers/bonobo-config-bag.c: #if 0 out a function that
	is only referenced in a commented out line.

2005-12-13  Gustavo J. A. M. Carneiro  <gjc@inescporto.pt>

	* libgnome/gnome-program.c (gnome_program_init_paramv): Allow
	nparams == 0, gnome-python depends on it.

2005-12-12  Kjartan Maraas  <kmaraas@gnome.org>

	* configure.in: Bump version to 2.13.3.

2005-12-12  Kjartan Maraas  <kmaraas@gnome.org>

	* .cvsignore: Shh
	* doc/reference/.cvsignore: Shh
	* doc/reference/tmpl/gnome-url.sgml: This changed somehow
	* libgnome/gnome-program.c: (gnome_program_init_paramv):
	Check for nparams > 0 not >= 0.
	* monikers/bonobo-moniker-extra.c: Remove extra semicolon.
	* po/.cvsignore: Shh

2005-12-11  Kjartan Maraas  <kmaraas@gnome.org>

	* libgnome/gnome-url (gnome_url_show_with_env): Give some
	feedback if the host can't be found. Patch from Christian Neumair.
	Closes bug #323659.

2005-11-14  Sebastien Bacher  <seb128@debian.org>

	* NEWS:
	* configure.in:
	update for 2.13.2.

2005-11-14  Sebastien Bacher  <seb128@debian.org>

	* schemas/desktop_gnome_interface.schemas.in:
	describe the new XSettings to control the visibility of the 
	input method and Unicode control character submenus in the context 
	menus of entries and text views, change by Matthias Clasen 
	(Closes: #319637). 

2005-11-14  Sebastien Bacher  <seb128@debian.org>

	* schemas/desktop_gnome_peripherals_mouse.schemas.in: