@@ -27,3 +27,4 @@ Gnome.h
 *-imodule.c
 test-sound
 gnome-open
+stamp-libgnometypebuiltins.h
